# LFU_Cache

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lfu.cpp  lfu.hpp
belady/: CMakeLists.txt
belady/fast/: CMakeLists.txt
belady/fast/src/: ideal_cache.cpp
belady/include/: belady.hpp  belady_naive.hpp
belady/naive/: CMakeLists.txt
belady/naive/src/: belady_naive.cpp  ideal_cache_naive.cpp
belady/src/: belady.cpp  belady_naive.cpp
ideal_cache/: CMakeLists.txt
ideal_cache/fast/: CMakeLists.txt
ideal_cache/include/: ideal_cache.hpp  ideal_cache_naive.hpp
ideal_cache/naive/: CMakeLists.txt
ideal_cache/naive/src/: ideal_cache_naive.cpp
ideal_cache/src/: ideal_cache.cpp
include/: belady.hpp  belady_naive.hpp  ideal_cache.hpp  lfu.hpp  lfu_naive.hpp
lfu/: CMakeLists.txt
lfu/fast/: CMakeLists.txt
lfu/fast/src/: lfu.cpp
lfu/include/: lfu.hpp  lfu_naive.hpp
lfu/naive/: CMakeLists.txt
lfu/naive/src/: lfu_naive.cpp
lfu/src/: lfu.cpp  lfu_naive.cpp
lfu_naive/: CMakeLists.txt
lfu_naive/src/: lfu_naive.cpp
src/: ideal_cache.cpp  lfu.cpp  lfu_naive.cpp
tests/: CMakeLists.txt  bar_chart.py  graph_builder.sh  test_generator.py  tester.sh
tests/src/: belady.cpp  lfu.cpp
