if (DEFINED IMPLEMENTATION)
    if (${IMPLEMENTATION} STREQUAL fast)
        add_subdirectory(fast)
    elseif (${IMPLEMENTATION} STREQUAL naive)
        add_subdirectory(naive)
    else()
        message(FATAL_ERROR "There is no \"${IMPLEMENTATION}\" "
                            "implementation of ${ALGORITHM} cache")
    endif()
else()
    add_subdirectory(fast)
    add_subdirectory(naive)
endif()
